# mtg-forge-rs

./: .#DEVLOG.md  .gitignore  .gitmodules  CLAUDE.md  CONTROLLER_DESIGN.md  CONTROLLER_REFACTOR_PLAN.md  Cargo.toml  DEVLOG.md  LICENSE  Makefile  OPTIMIZATION.md  PROJECT_VISION.md  README.md  REFACTORING_STATUS.md  STATE_HASH_DEBUG_TODO.md  STATE_HASH_REMAINING.md  TODO.md  cardsfolder  claude_workstream01.jsonl  error.txt  game.snapshot  generic_forward_progress_task.txt  gogo_claude.sh  prompt.txt  run_examples.sh  test_snapshot.sh
.beads/: .gitignore  DEVLOG_RRN.md  bd.sock.startlock  config.yaml  ingest_inbox.py  ingest_inbox.sh  issue_history.py  issues.jsonl  kill_db.sh  mtg.db  vc.db  vc.db-shm  vc.db-wal
.devcontainer/: .gitignore  Dockerfile  Makefile
ai_docs/: AI_VALIDATION_LOG.md  CARD_SCRIPT_SPEC.md  CONTROLLER_DESIGN.md  CONTROLLER_ORACLE_ANALYSIS.md  PZL_FORMAT_ANALYSIS.md  gamestate_comparison_analysis.md  rng_state_issue.md  snapshot_architecture.md  snapshot_determinism_issues.md  snapshot_log_duplication_analysis.md
benches/: game_benchmark.rs  puzzle_parse_benchmark.rs  puzzle_parse_comparison.rs
debug/: .gitignore  README.md
debug_artifacts/: grizzly_bears_randomvheuristic_seed12345_replay1_normal.gamestate  grizzly_bears_randomvheuristic_seed12345_replay1_snapshot_1.json  grizzly_bears_randomvheuristic_seed12345_replay1_snapshot_2.json  grizzly_bears_randomvheuristic_seed12345_replay1_snapshot_3.json  grizzly_bears_randomvheuristic_seed12345_replay1_snapshot_4.json  grizzly_bears_randomvheuristic_seed12345_replay1_snapshot_5.json  grizzly_bears_randomvheuristic_seed12345_replay1_snapshot_6.json  grizzly_bears_randomvheuristic_seed12345_replay1_stopgo.gamestate
decks/: README.md  grizzly_bears.dck  heuristic_test_attacker.dck  monored_simple.dck  multicolor_test.dck  vigilance_deck.dck
devcontainer-old/: Dockerfile  Makefile
docs/: AI_PORTING_ANALYSIS.md  CHUMSKY_EXPERIMENT_RESULTS.md  DCK_FORMAT.md  HOWTO_AGENT_PLAY+REPRODUCERS.md  PZL_GRAMMAR.md  PZL_PARSER_ANALYSIS.md
examples/: activated_abilities_expanded_demo.rs  activated_ability_demo.rs  ai_vs_ai_game.rs  artifact_enchantment_demo.rs  basic_land_demo.rs  combat_demo.rs  counterspell_demo.rs  etb_triggers_demo.rs  etb_triggers_expansion_demo.rs  lightning_bolt_game.rs  lightning_bolt_game_v2.rs  lightning_bolt_game_v3.rs  load_puzzle.rs  mana_ability_demo.rs  sacrifice_cost_demo.rs
logs/: .gitignore
prompts/: generic_forward_progress_task.txt  optimization_task.txt  task_gardening.txt
puzzles/: royal_assassin_combat_bug.pzl
rules/: 02_mtg_rules_condensed_medium_length_gemini.md  03_mtg_rules_2400_words_gemini_shortened.md  README.md
scripts/: README.md  analyze_heapprofile.sh  backfill_history  backfill_history.sh  debug_rng_restore.sh  diff_gamestate.py  diff_logs.py  discoverTests.sh  gitdepth.sh  gogo_claude.sh  plot_performance  plot_performance.py  run_benchmark  run_benchmark.sh  run_examples.sh  show_all_issues.sh  snapshot_stress_test_single.py  test_snapshot_determinism.py  timeAllTests.sh  update_submods.sh  validate.sh
src/: error.rs  lib.rs  main.rs  tournament.rs  undo.rs  zones.rs
test_decks/: README.md  combat_test_4ed.dck  convert_arena_to_dck.py  grizzly_bears.dck  heuristic_test_defender_no_blockers.dck  monored.dck  royal_assassin.dck  simple_bolt.dck  white_aggro_4ed.dck  white_weenie.dck  white_weenie_4ed.dck
test_puzzles/: activated_ability_timing.pzl  activated_ability_usage.pzl  blocking_optimization_complex.pzl  board_wipe_vs_spot_removal.pzl  card_advantage_value.pzl  combat_trick_instant.pzl  damage_ordering_decision.pzl  (+36 more)
(+321 files in other folders)
