[package]
name = "mtg-forge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }

# Collections
smallvec = { version = "1.11", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parsing
nom = "7.1"

# Random number generation
rand = "0.8"

# Hashing (for fast lookups)
rustc-hash = "1.1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
stats_alloc = "0.1"

# Performance benchmarks
[[bench]]
name = "game_benchmark"
harness = false
