[package]
name = "mtg-forge-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtg"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }

# Collections
smallvec = { version = "1.11", features = ["serde"] }
smallmap = { version = "1.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parsing
nom = "7.1"

# Random number generation
rand = "0.8"

# Hashing (for fast lookups)
rustc-hash = "1.1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "time", "sync"] }

# Parallel directory walking
jwalk = "0.8"

[dev-dependencies]
criterion = "0.5"
stats_alloc = "0.1"
dir-test = "0.4"
similar-asserts = "1.5"
libc = "0.2"

# Performance benchmarks
[[bench]]
name = "game_benchmark"
harness = false

[[bench]]
name = "puzzle_parse_benchmark"
harness = false

[features]
# Enable verbose game event logging (format! allocations)
# Disable this feature for maximum performance in benchmarks
default = ["verbose-logging"]
verbose-logging = []

[profile.release]
debug = true
